--- a/src/app/dashboard/components/evaluations/std-evaluation/std-evaluation.component.html
+++ b/src/app/dashboard/components/evaluations/std-evaluation/std-evaluation.component.html
@@ -57,5 +57,5 @@
     <div class="button">
         <button mat-raised-button color="primary" (click)="goBack()">Regresar</button>
     </div>
-    
+    <div id="element" style="display: none; max-width: 1024px;"></div>
 </main>
