--- a/src/app/dashboard/components/certificates/adm-design-certificate/adm-design-certificate.component.html
+++ b/src/app/dashboard/components/certificates/adm-design-certificate/adm-design-certificate.component.html
@@ -47,9 +47,10 @@
         <p>##INI_DATE## <span>Fecha inicio</span></p>
         <p>##END_DATE## <span>Fecha expiración</span></p>
         <p>##HOURS## <span>Duración formación</span></p>
-        <p>##GENERAL## <span>calificación examen general</span></p>
-        <p>##ESPECIFICO## <span>calificación examen especifico</span></p>
-        <p>##PRACTICO## <span>calificación examen practico</span></p>
-        <p>##FINAL## <span>calificación final</span></p>
+        <p>##GENERAL## <span>Calificación examen general</span></p>
+        <p>##ESPECIFICO## <span>Calificación examen especifico</span></p>
+        <p>##PRACTICO## <span>Calificación examen practico</span></p>
+        <p>##FINAL## <span>Calificación final</span></p>
+        <p>##CERTIFICATE## <span>Consecutivo certificado obtenido</span></p>
     </section>
 </main>
