--- a/src/app/dashboard/components/cursos/create/create.component.html
+++ b/src/app/dashboard/components/cursos/create/create.component.html
@@ -112,10 +112,34 @@
             <ng-container *ngIf="percentageField.hasError('required')">Este campo es requerido</ng-container>
           </mat-error>
         </mat-form-field>
+        <!-- precio cop -->
+        <mat-form-field>
+          <mat-label>Precio del curso (COP)</mat-label>
+          <input
+            type="number"
+            matInput
+            formControlName="cop"
+            tabIndex=8/>
+          <mat-error *ngIf="copField.touched && copField.invalid">
+            <ng-container *ngIf="copField.hasError('required')">Este campo es requerido</ng-container>
+          </mat-error>
+        </mat-form-field>
+        <!-- precio usd -->
+        <mat-form-field>
+          <mat-label>Precio del curso (USD)</mat-label>
+          <input
+            type="number"
+            matInput
+            formControlName="usd"
+            tabIndex=9/>
+          <mat-error *ngIf="usdField.touched && usdField.invalid">
+            <ng-container *ngIf="usdField.hasError('required')">Este campo es requerido</ng-container>
+          </mat-error>
+        </mat-form-field>
         <!-- Plantilla certificado -->
         <mat-form-field appearance="fill">
           <mat-label>Plantilla certificado</mat-label>
-          <mat-select formControlName="plantilla" tabIndex="4">
+          <mat-select formControlName="plantilla" tabIndex="10">
               <mat-option *ngFor="let item of certs" [value]="item.id">
                   {{ item.titulo }}
               </mat-option>
@@ -125,14 +149,14 @@
           </mat-select>
       </mat-form-field>
         <!-- Vencimiento certificado -->
-        <mat-checkbox class="example-margin" formControlName="vence" [(ngModel)]="vence">Certificado vence?</mat-checkbox>
+        <mat-checkbox class="example-margin" formControlName="vence" tabIndex=11 [(ngModel)]="vence">Certificado vence?</mat-checkbox>
         <mat-form-field *ngIf="vence">
           <mat-label>Vencimiento certificado (años)</mat-label>
           <input
             type="number"
             matInput
             formControlName="vencimiento"
-            tabIndex=7/>
+            tabIndex=12/>
           <mat-error *ngIf="vencimientoField.touched && vencimientoField.invalid">
             <ng-container *ngIf="vencimientoField.hasError('required')">Este campo es requerido</ng-container>
           </mat-error>
@@ -141,10 +165,10 @@
       <div class="buttons">
         <button
           type="submit"
-          tabIndex=8
+          tabIndex=13
           mat-raised-button
           [disabled]="form.invalid">{{ id ? 'Guardar cambios' : 'Guardar'}}</button>
-				<a mat-raised-button (click)="cancel()" tabIndex=9>Cancelar</a>
+				<a mat-raised-button (click)="cancel()" tabIndex=14>Cancelar</a>
       </div>
     </form>
   </main>
