--- a/src/app/home/components/courses/courses.component.html
+++ b/src/app/home/components/courses/courses.component.html
@@ -10,8 +10,18 @@
                     <span (click)="openDialog(item)" class="material-icons">info</span>
                 </div>
             </div>
+        
             <div class="course-detail">
                 <h3><a (click)="goToCourseDetail(item.id)">{{ item.nombre }}</a></h3>
+                <div class="price">
+                    <h3>{{ item.moneda }} {{ item.precioAMostrar | currency }}</h3>
+                    <span
+                        matTooltip={{item.mensajeMoneda}}
+                        (click)="changePriceToShow(item)"
+                        class="material-icons">
+                            currency_exchange
+                    </span>
+                </div>
                 <div class="ranking">
                     <star-rating [starType]="'svg'"
                     (starClickChange)="agregarEstrella($event.rating, item)"
@@ -21,8 +31,6 @@
                     <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.votos}} votos</p>
                 </div>
                 <div class="profesor-info">
-                    <img
-                        src="https://chym-elearning.com/app/upload/users/1/1168/small_1168_5f7e7d11ecfc6_Solo-Logo-alta.jpg?rand=602831cae60a8"alt="">
                     <p>Profesor: <span>{{ item.profesor }}</span></p>
                 </div>
             </div>
