precios en tarjetas de carreras

--- a/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
+++ b/src/app/dashboard/components/carreras/catalogo-carreras/catalogo-carreras.component.html
@@ -11,15 +11,30 @@
                 </div>
             </div>
             <div class="course-detail">
-                <h3
-                [routerLink]="'/carreras/detail/dash/'+item.id+'/'+this.userId"
-                ><a>{{ item.nombre }}</a></h3>
+                <div class="title">
+                    <h3
+                    [routerLink]="'/carreras/detail/dash/'+item.id+'/'+this.userId">
+                            <a>{{ item.nombre }}</a>
+                    </h3>
+                </div>
+                <div class="price">
+                    <h3>{{ item.moneda }} {{ item.precioAMostrar | currency }}</h3>
+                    <div class="price-info">
+                        <span
+                            (click)="changePriceToShow(item)"
+                            class="material-icons"
+                            style="max-width: 24px;"
+                            matTooltip={{item.mensajeMoneda}}>
+                            paid
+                        </span>
+                    </div>
+                </div>
                 <div class="ranking">
                     <star-rating 
                     (starClickChange)="agregarEstrella($event.rating, item)"
                     [starType]="'svg'"
                     [speed]="'slow'"
-                    [disabled]="item.haVotado"
+                    [disabled]="item.haVotado || !dashboard"
                     [rating]="item.promedio"
                     [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
                     <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.nroVotos}} votos</p>
@@ -28,3 +43,4 @@
         </div>
     </div>
 </section>
+
