--- a/src/app/dashboard/components/navigation/navigation.component.html
+++ b/src/app/dashboard/components/navigation/navigation.component.html
@@ -50,6 +50,14 @@
             <a mat-list-item (click)="goToAdmCertificates()">Certificados</a>
             <mat-divider></mat-divider>
           </mat-list-item>
+          <mat-list-item class="secondary-list">
+            <a mat-list-item (click)="goToCoupons()">Cupones</a>
+            <mat-divider></mat-divider>
+          </mat-list-item>
+          <mat-list-item class="secondary-list">
+            <a mat-list-item (click)="goToPayments()">Pagos Payu</a>
+            <mat-divider></mat-divider>
+          </mat-list-item>
         </mat-list>
       </mat-expansion-panel>
       <!-- // cursos ofrecidos -->
@@ -148,6 +156,10 @@
           </mat-list-item>
           <mat-list-item class="secondary-list">
             <a mat-list-item (click)="goToMyCertificates()">Mis Certificados</a>
+            <mat-divider></mat-divider>
+          </mat-list-item>
+          <mat-list-item class="secondary-list">
+            <a mat-list-item (click)="goToMyPayments()">Mis Pagos</a>
             <mat-divider></mat-divider>
           </mat-list-item>
         </mat-list>
