--- a/src/app/home/components/careers/careers.component.html
+++ b/src/app/home/components/careers/careers.component.html
@@ -3,20 +3,25 @@
     <div class="courses-container">
         <div class="single-course" *ngFor="let item of carreras">
             <div class="course-image">
-                <img src="{{ item.image }}" alt="" loading="lazy" />
+                <img src="{{ item.image }}" alt="" loading="lazy">
                 <div class="course-info">
-                    <span
-                    (click)="openDialog(item)"
-                    class="material-icons">info</span>
+                    <span (click)="openDialog(item)" class="material-icons">info</span>
+                </div>
+            </div>
+            <div class="course-title">
+                <h3>
+                    <a (click)="goToCourseDetail(item.id)">{{ item.nombre }}</a>
+                </h3>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'"
+                    (starClickChange)="agregarEstrella($event.rating, item)"
+                    [disabled]="item.haVotado || !dashboard"
+                    [rating]="item.promedio"
+                    [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.nroVotos}} votos</p>
                 </div>
             </div>
             <div class="course-detail">
-                <div class="title">
-                    <h3
-                        [routerLink]="'/carreras/detail/'+item.id+'/home'">
-                            <a>{{ item.nombre }}</a>
-                    </h3>
-                </div>
                 <div class="price">
                     <h3>{{ item.moneda }} {{ item.precioAMostrar | currency }}</h3>
                     <div class="price-info">
@@ -29,16 +34,10 @@
                         </span>
                     </div>
                 </div>
-                <div class="ranking">
-                    <star-rating 
-                    (starClickChange)="agregarEstrella($event.rating, item)"
-                    [starType]="'svg'"
-                    [speed]="'slow'"
-                    [disabled]="item.haVotado || !dashboard"
-                    [rating]="item.promedio"
-                    [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
-                    <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.nroVotos}} votos</p>
-                </div>
+                
+                <button mat-raised-button (click)="goToBuy(item)">
+                    <mat-icon>payment</mat-icon> Comprar
+                </button>
             </div>
         </div>
     </div>
