--- a/src/app/home/components/careers/careers.component.scss
+++ b/src/app/home/components/careers/careers.component.scss
@@ -7,211 +7,227 @@
     justify-items: center;
     align-items: center;
     position: relative;
-}
 
-.main-container h2 {
-    background: var(--main-color2);
-    color: white;
-    font-weight: 700;
-    padding: 16px 64px;
-    text-transform: uppercase;
-    border: 5px solid #b0bec5;
-    border-radius: 40px 0px 40px 6px;
-    text-shadow: -3px 3px 9px rgba(4,106,121,0.81);
-}
+    h2 {
+        background: var(--main-color2);
+        color: white;
+        font-weight: 700;
+        padding: 16px 64px;
+        text-transform: uppercase;
+        border: 5px solid #b0bec5;
+        border-radius: 40px 0px 40px 6px;
+        text-shadow: -3px 3px 9px rgba(4,106,121,0.81);
+    }
 
-.courses-container {
-    width: 80%;
-    margin: 40px 24px;
-    display: grid;
-    grid-template-columns: 320px 320px 320px;
-    gap: 40px 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-.single-course {
-    background: var(--secondary1);
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px #999;
-    display: grid;
-    grid-template-rows: 1fr 1fr;
-    width: 90%;
-    justify-items: center;
-    justify-self: center;
-}
-
-.single-course .course-image {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: relative;
-    border-radius: 5px;
-    width: 100%;
-}
-
-.single-course .course-image img {
-    width: 100%;
-    display: block;
-    height: 10rem;
-    border-radius: 5px;
-}
-
-.single-course .course-image .category {
-    position: absolute;
-    bottom: 0;
-    right: -10px;
-    background-color: var(--main-color-rgb2);
-    color: #fff;
-    padding: 5px 10px;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    z-index: 2;
-    font-weight: 700;
-    height: 32px;
-    line-height: 32px;
-    max-width: 80%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    border: 1px solid var(--secondary1);
-}
-
-.single-course .course-image .cribbon {
-    width: 0;
-    height: 0;
-    border-top: 10px solid #333333;
-    border-right: 10px solid transparent;
-    position: absolute;
-    bottom: -10px;
-    right: -10px;
-}
-
-.single-course .course-image .course-info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: var(--secondary1);
-    height: 32px;
-    padding: 5px 10px;
-    display: flex;
-    align-items: center;
-    border-top-right-radius: 5px;
-    cursor: pointer;
-}
-
-.single-course .course-image .course-info:hover {
-    color: var(--main-color2);
-}
-
-.single-course .course-detail {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-}
-
-.single-course .course-detail .title {
-    display: flex;
-    justify-items: center;
-    align-items: center;
-    margin: 0 1rem;
-}
-
-.single-course .course-detail .title h3 {
-    align-self: center;
-    justify-self: center;
-    margin: 1rem 0.5rem 0 0.5rem;
-    font-size: 0.9rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-}
-
-.single-course .course-detail .title h3 a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
-}
-
-.single-course .course-detail .price {
-    width: 100%;
-    //border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem;
-}
-
-.single-course .course-detail .price h3 {
-    margin: 0 0 0 1rem;
-    min-height: auto;
-    color: var(--main-color2);
-    font-size: 0.9rem;
-    font-weight: 700;
-}
-
-.single-course .course-detail .price .price-info {
-    color: var(--main-color2);
-    background: var(--secondary1);
-    height: 32px;
-    padding: 5px 10px;
-    display: flex;
-    align-items: center;
-    border-top-right-radius: 5px;
-    cursor: pointer;
-}
-
-.single-course .course-detail .price .price-info:hover {
-    color: #ffc058;
-}
-
-.single-course .course-detail .ranking {
-    margin: 5px 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.single-course .course-detail .ranking p {
-    padding: 0;
-    margin: 0 8px;
-    font-size: 0.7rem;
-}
-
-@media (max-width: 1148px) {
     .courses-container {
-        grid-template-columns: 300px 300px 300px;
+        width: 80%;
+        margin: 40px 24px;
+        display: grid;
+        grid-template-columns: 320px 320px 320px;
+        gap: 40px 20px;
+        align-items: center;
+        justify-content: center;
+
+        .single-course {
+            background: var(--secondary1);
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px #999;
+            display: grid;
+            grid-template-rows: 1fr 0.5fr 0.5fr;
+            width: 90%;
+            justify-items: center;
+            justify-self: center;
+
+            .course-image {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                position: relative;
+                border-radius: 5px;
+                width: 100%;
+
+                img {
+                    width: 100%;
+                    display: block;
+                    max-height: 144px;
+                    border-radius: 5px;
+                }
+
+                .course-info {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    background: rgba(188, 196, 197, 0.81);
+                    height: 32px;
+                    padding: 5px 10px;
+                    display: flex;
+                    align-items: center;
+                    border-top-right-radius: 5px;
+                    cursor: pointer;
+                }
+
+                .course-info:hover {
+                    color: var(--main-color2);
+                }
+            }
+        
+            .course-title {
+                padding: 0;
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: flex-start;
+                
+
+                h3 {
+                    align-self: center;
+                    justify-self: center;
+                    margin: 0;
+                    font-size: 1rem;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    text-align: center;
+                    min-height: 56px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-bottom: 2px solid white;
+                    background: rgba(188, 196, 197, 0.81);
+                    width: 100%;
+                }
+
+                h3 a {
+                    text-decoration: none;
+                    color: black;
+                    cursor: pointer;
+                }
+
+                .ranking {
+                    width: 100%;
+                    margin-top: 0.5rem;
+                    margin-bottom: 0.4rem;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    p {
+                        padding: 0;
+                        margin: 0 8px;
+                        font-size: 0.7rem;
+                    }
+                }
+
+            }
+
+            .course-detail {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 0 0 0.5rem 0;
+                //flex-direction: column;
+
+                .price {
+                    
+                    //border: 1px solid red;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 0.5rem;
+
+                    h3 {
+                        margin: 0;
+                        min-height: auto;
+                        color: var(--main-color2);
+                        align-self: center;
+                        justify-self: center;
+                        //margin: 8px 16px;
+                        font-size: 0.9rem;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        text-align: center;
+
+                    }
+
+                    .price-info {
+                        color: var(--main-color2);
+                        background: var(--secondary1);
+                        height: 32px;
+                        padding: 5px 10px;
+                        display: flex;
+                        align-items: center;
+                        border-top-right-radius: 5px;
+                        cursor: pointer;
+                    }
+
+                    .price-info:hover {
+                        color: #ffc058;
+                    }
+                } 
+                
+                button {
+                    width: 95%;
+                    color: white;
+                    background: var(--main-color2);
+                }
+
+                button:hover {
+                    color: #ffc058;
+                }
+            }
+        }
     }
 }
 
+
+@media (max-width: 1148px) {
+    .main-container {
+        .courses-container {
+            grid-template-columns: 300px 300px 300px;
+        }
+    }
+    
+}
+
 @media (max-width: 968px) {
-    .courses-container {
-        grid-template-columns: 280px 280px 280px;
-        gap: 30px 16px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 280px 280px 280px;
+            gap: 30px 16px;
+        }
     }
 }
 
 @media (max-width: 906px) {
-    .courses-container {
-        grid-template-columns: 360px 360px;
-        gap: 30px 24px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 360px 360px;
+            gap: 30px 24px;
+        }
     }
 }
 
 @media (max-width: 780px) {
-    .courses-container {
-        grid-template-columns: 300px 300px;
-        gap: 30px 24px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 290px 290px;
+            gap: 30px 24px;
+        }
     }
 }
 
 @media (max-width: 660px) {
-    .main-container h2 {
-        padding: 12px 48px;
-    }
+    .main-container {
+        h2 {
+            padding: 12px 48px;
+        }
 
-    .courses-container {
-        grid-template-columns: 360px;
-        gap: 40px 24px;
+        .courses-container {
+            grid-template-columns: 300px;
+            gap: 40px 24px;
+        }
     }
 }
