--- a/src/app/home/components/courses/courses.component.html
+++ b/src/app/home/components/courses/courses.component.html
@@ -11,7 +11,20 @@
                 </div>
             </div>
             <div class="course-title">
-                <h3><a (click)="goToCourseDetail(item.id)">{{ item.nombre }}</a></h3>
+                <h3>
+                    <a (click)="goToCourseDetail(item.id)">{{ item.nombre }}</a>
+                </h3>
+                <div class="profesor-info">
+                    <p>Profesor: <span>{{ item.profesor }}</span></p>
+                </div>
+                <div class="ranking">
+                    <star-rating [starType]="'svg'"
+                    (starClickChange)="agregarEstrella($event.rating, item)"
+                    [disabled]="item.haVotado || !dashboard"
+                    [rating]="item.promedio"
+                    [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
+                    <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.votos}} votos</p>
+                </div>
             </div>
             <div class="course-detail">
                 <div class="price">
@@ -26,17 +39,10 @@
                         </span>
                     </div>
                 </div>
-                <div class="ranking">
-                    <star-rating [starType]="'svg'"
-                    (starClickChange)="agregarEstrella($event.rating, item)"
-                    [disabled]="item.haVotado || !dashboard"
-                    [rating]="item.promedio"
-                    [staticColor]="'ok'" [step]="0.5" [showHalfStars]="true"></star-rating>
-                    <p>{{item.promedio}} {{item.promedio<2 ? 'estrella':'estrellas'}} | {{item.votos}} votos</p>
-                </div>
-                <div class="profesor-info">
-                    <p>Profesor: <span>{{ item.profesor }}</span></p>
-                </div>
+                
+                <button mat-raised-button (click)="goToBuy(item)">
+                    <mat-icon>payment</mat-icon> Comprar
+                </button>
             </div>
         </div>
     </div>
