--- a/src/app/home/components/courses/courses.component.scss
+++ b/src/app/home/components/courses/courses.component.scss
@@ -1,328 +1,280 @@
 .main-container {
     width: 80%;
     margin: 60px 0;
-    //min-height: 400px;
-    //background: #046a79;  /* fallback for old browsers */
-    //background: -webkit-linear-gradient(to left, #01c2d8, #046a79);  /* Chrome 10-25, Safari 5.1-6 */
-    //background: linear-gradient(30deg, rgba(55, 71, 79, 0.9), var(--main-color-rgb2)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     display: grid;
     grid-template-rows: 50px 1fr;
     gap: 30px 20px;
     justify-items: center;
     align-items: center;
-    // border-top: 1px solid #455a64;
-    // border-bottom: 1px solid #455a64;
-    //border-radius: 471px 345px 542px 20px / 291px 3px 300px 0px;
-    //-webkit-box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94); 
-    //box-shadow: 0px 5px 10px 3px rgba(76,76,76,0.94);
-    // background-repeat: no-repeat;
-    // background-size: cover;
     position: relative;
-}
 
-// .main-container::after {
-//     content: "";
-//     background: url(https://images.pexels.com/photos/6331025/pexels-photo-6331025.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940);
-//     opacity: 0.6;
-//     top: 0;
-//     left: 0;
-//     bottom: 0;
-//     right: 0;
-//     position: absolute;
-//     z-index: -1;
-// }
-
-.main-container h2 {
-    background: var(--main-color2);
-    color: white;
-    font-weight: 700;
-    padding: 16px 64px;
-    text-transform: uppercase;
-    border: 5px solid #b0bec5;
-    border-radius: 40px 0px 40px 6px;
-    text-shadow: -3px 3px 9px rgba(4,106,121,0.81);
-}
-
-.courses-container {
-    width: 80%;
-    margin: 40px 24px;
-    display: grid;
-    grid-template-columns: 320px 320px 320px;
-    gap: 40px 20px;
-    align-items: center;
-    justify-content: center;
-}
-
-.single-course {
-    background: var(--secondary1);
-    border-radius: 5px;
-    box-shadow: 2px 2px 10px #999;
-    display: grid;
-    grid-template-rows: 1fr 0.5fr 1fr;
-    width: 90%;
-    justify-items: center;
-    justify-self: center;
-}
-
-.single-course .course-image {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    position: relative;
-    border-radius: 5px;
-    width: 100%;
-}
-
-.single-course .course-image img {
-    width: 100%;
-    display: block;
-    max-height: 144px;
-    border-radius: 5px;
-}
-
-.single-course .course-image .category {
-    position: absolute;
-    bottom: 0;
-    right: -10px;
-    background-color: var(--main-color-rgb2);
-    color: #fff;
-    padding: 5px 10px;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    z-index: 2;
-    font-weight: 700;
-    height: 32px;
-    line-height: 32px;
-    max-width: 80%;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    border: 1px solid var(--secondary1);
-}
-
-.single-course .course-image .cribbon {
-    width: 0;
-    height: 0;
-    border-top: 10px solid #333333;
-    border-right: 10px solid transparent;
-    position: absolute;
-    bottom: -10px;
-    right: -10px;
-}
-
-.single-course .course-image .course-info {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: var(--secondary1);
-    height: 32px;
-    padding: 5px 10px;
-    display: flex;
-    align-items: center;
-    border-top-right-radius: 5px;
-    cursor: pointer;
-}
-
-.single-course .course-image .course-info:hover {
-    color: var(--main-color2);
-}
-
-.course-title h3 {
-    align-self: center;
-    justify-self: center;
-    margin: 1rem 0.5rem 0 0.5rem;
-    font-size: 0.9rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    min-height: 56px;
+    h2 {
+        background: var(--main-color2);
+        color: white;
+        font-weight: 700;
+        padding: 16px 64px;
+        text-transform: uppercase;
+        border: 5px solid #b0bec5;
+        border-radius: 40px 0px 40px 6px;
+        text-shadow: -3px 3px 9px rgba(4,106,121,0.81);
     }
+
+    .courses-container {
+        width: 80%;
+        margin: 40px 24px;
+        display: grid;
+        grid-template-columns: 320px 320px 320px;
+        gap: 40px 20px;
+        align-items: center;
+        justify-content: center;
+
+        .single-course {
+            background: var(--secondary1);
+            border-radius: 5px;
+            box-shadow: 2px 2px 10px #999;
+            display: grid;
+            grid-template-rows: 1fr 1fr 0.5fr;
+            width: 90%;
+            justify-items: center;
+            justify-self: center;
+
+            .course-image {
+                display: flex;
+                flex-direction: column;
+                align-items: flex-end;
+                position: relative;
+                border-radius: 5px;
+                width: 100%;
+
+                img {
+                    width: 100%;
+                    display: block;
+                    max-height: 144px;
+                    border-radius: 5px;
+                }
+
+                .category {
+                    position: absolute;
+                    bottom: 0;
+                    right: -10px;
+                    background-color: var(--main-color-rgb2);
+                    color: #fff;
+                    padding: 5px 10px;
+                    font-size: 0.9rem;
+                    text-transform: uppercase;
+                    z-index: 2;
+                    font-weight: 700;
+                    height: 32px;
+                    line-height: 32px;
+                    max-width: 80%;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    text-overflow: ellipsis;
+                    border: 1px solid var(--secondary1);
+                }
+
+                .cribbon {
+                    width: 0;
+                    height: 0;
+                    border-top: 10px solid #333333;
+                    border-right: 10px solid transparent;
+                    position: absolute;
+                    bottom: -10px;
+                    right: -10px;
+                }
+
+                .course-info {
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    background: rgba(188, 196, 197, 0.81);
+                    height: 32px;
+                    padding: 5px 10px;
+                    display: flex;
+                    align-items: center;
+                    border-top-right-radius: 5px;
+                    cursor: pointer;
+                }
+
+                .course-info:hover {
+                    color: var(--main-color2);
+                }
+            }
+        
+            .course-title {
+                
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                
+
+                h3 {
+                    align-self: center;
+                    justify-self: center;
+                    margin: 0;
+                    font-size: 1rem;
+                    font-weight: 700;
+                    text-transform: uppercase;
+                    text-align: center;
+                    min-height: 56px;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    border-bottom: 2px solid white;
+                    background: rgba(188, 196, 197, 0.81);
+                    width: 100%;
+                }
+
+                h3 a {
+                    text-decoration: none;
+                    color: black;
+                    cursor: pointer;
+                }
+
+                .profesor-info {
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    margin-bottom: 1rem;
     
-.course-title h3 a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
+                    p {
+                        margin: 0;
+                    }
+    
+                    span {
+                        font-weight: 600;
+                        margin-left: 5px;
+                        color: var(--main-color2);
+                    }
+                }
+
+                .ranking {
+                    width: 100%;
+                    margin-bottom: 5px;
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    align-items: center;
+
+                    p {
+                        padding: 0;
+                        margin: 0 8px;
+                        font-size: 0.7rem;
+                    }
+                }
+
+            }
+
+            .course-detail {
+                width: 100%;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                margin: 0 0 0.5rem 0;
+                //flex-direction: column;
+
+                .price {
+                    
+                    //border: 1px solid red;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    padding: 0.5rem;
+
+                    h3 {
+                        margin: 0;
+                        min-height: auto;
+                        color: var(--main-color2);
+                        align-self: center;
+                        justify-self: center;
+                        //margin: 8px 16px;
+                        font-size: 0.9rem;
+                        font-weight: 700;
+                        text-transform: uppercase;
+                        text-align: center;
+
+                    }
+
+                    .price-info {
+                        color: var(--main-color2);
+                        background: var(--secondary1);
+                        height: 32px;
+                        padding: 5px 10px;
+                        display: flex;
+                        align-items: center;
+                        border-top-right-radius: 5px;
+                        cursor: pointer;
+                    }
+
+                    .price-info:hover {
+                        color: #ffc058;
+                    }
+                } 
+                
+                button {
+                    width: 95%;
+                    color: white;
+                    background: var(--main-color2);
+                }
+
+                button:hover {
+                    color: #ffc058;
+                }
+            }
+        }
+    }
 }
 
-.single-course .course-detail {
-    display: flex;
-    flex-direction: column;
-}
-
-.single-course .course-detail .price {
-    width: 100%;
-    //border: 1px solid red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 0.5rem;
-}
-
-.single-course .course-detail .price h3 {
-    margin: 0 0 0 1rem;
-    min-height: auto;
-    color: var(--main-color2);
-}
-
-.single-course .course-detail .price .price-info {
-    color: var(--main-color2);
-    background: var(--secondary1);
-    height: 32px;
-    padding: 5px 10px;
-    display: flex;
-    align-items: center;
-    border-top-right-radius: 5px;
-    cursor: pointer;
-}
-
-.single-course .course-detail .price .price-info:hover {
-    color: #ffc058;
-}
-
-.single-course .course-detail h3 {
-    align-self: center;
-    justify-self: center;
-    margin: 8px 16px;
-    font-size: 1rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    text-align: center;
-    min-height: 56px;
-}
-
-.single-course .course-detail h3 a {
-    text-decoration: none;
-    color: black;
-    cursor: pointer;
-}
-
-.single-course .course-detail .ranking {
-    margin: 5px 20px;
-    display: flex;
-    flex-direction: column;
-}
-
-.single-course .course-detail .ranking p {
-    padding: 0;
-    margin: 0 8px;
-    font-size: 0.7rem;
-}
-
-.single-course .course-detail .profesor-info {
-    display: flex;
-    align-items: center;
-    margin-left: 8px;
-    margin-bottom: 16px;
-}
-
-.single-course .course-detail .profesor-info img {
-    min-width: 10%;
-    display: block;
-    height: auto;
-    border-radius: 5px;
-    margin: 0 16px;
-}
-
-.single-course .course-detail .profesor-info p {
-    margin: 0;
-}
-
-.single-course .course-detail .profesor-info span {
-    font-weight: 600;
-    margin-left: 5px;
-    color: var(--main-color2);
-}
 
 @media (max-width: 1148px) {
-    .courses-container {
-        grid-template-columns: 300px 300px 300px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 300px 300px 300px;
+        }
     }
+    
 }
 
 @media (max-width: 968px) {
-    .courses-container {
-        grid-template-columns: 280px 280px 280px;
-        gap: 30px 16px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 280px 280px 280px;
+            gap: 30px 16px;
+        }
     }
 }
 
 @media (max-width: 906px) {
-    .courses-container {
-        grid-template-columns: 360px 360px;
-        gap: 30px 24px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 360px 360px;
+            gap: 30px 24px;
+        }
     }
 }
 
 @media (max-width: 780px) {
-    .courses-container {
-        grid-template-columns: 290px 290px;
-        gap: 30px 24px;
+    .main-container {
+        .courses-container {
+            grid-template-columns: 290px 290px;
+            gap: 30px 24px;
+        }
     }
 }
 
 @media (max-width: 660px) {
-    .main-container h2 {
-        padding: 12px 48px;
-    }
+    .main-container {
+        h2 {
+            padding: 12px 48px;
+        }
 
-    .courses-container {
-        grid-template-columns: 300px;
-        gap: 40px 24px;
+        .courses-container {
+            grid-template-columns: 300px;
+            gap: 40px 24px;
+        }
     }
 }
-
-// @media (max-width: 1200px) {
-//     .courses-container {
-//         width: 80%;
-//         margin: 30px;
-//         grid-template-columns: 400px 400px;
-//         gap: 40px;
-//         justify-items: center;
-//     }
-// }
-
-// @media (max-width: 920px) {
-//     .main-container {
-//         margin: 16px 0;
-//         align-items: flex-start;
-//     }
-
-//     .courses-container {
-//         width: 90%;
-//         gap: 24px;
-//         margin: 24px 36px;
-//     }
-// }
-
-// @media (max-width: 800px) {
-//     .main-container {
-//         align-items: center;
-//     }
-
-//     .courses-container {
-//         grid-template-columns: 1fr;
-//         width: 60%;
-//     }
-// }
-
-// @media (max-width: 520px) {
-//     .courses-container {
-//         width: 85%;
-//         margin: 16px 5px 16px 32px;
-//         gap: 24px;
-//     }
-
-//     .single-course {
-//         width: 95%;
-//     }
-
-//     .single-course .course-image {
-//         width: 100%;
-//     }
-
-//     .single-course .course-image img {
-//         width: 100%;
-//     }
-// }
-
-
